@@ -9,6 +9,9 @@ import com.axonivy.market.core.enums.ErrorCode;
 import com.axonivy.market.core.enums.SortOption;
 import com.axonivy.market.core.exceptions.model.InvalidParamException;
 import com.axonivy.market.core.exceptions.model.NotFoundException;
+import com.axonivy.market.enums.PullRequestAction;
+import com.axonivy.market.github.service.GitHubService;
+import com.axonivy.market.model.DeprecationRequest;
 import com.axonivy.market.model.ProductCustomSortRequest;
 import com.axonivy.market.repository.MavenArtifactVersionRepository;
 import com.axonivy.market.repository.ProductCustomSortRepository;
@@ -19,6 +22,7 @@ import com.axonivy.market.service.FileDownloadService;
 import org.apache.commons.lang3.StringUtils;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.kohsuke.github.GHPullRequest;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
 import org.mockito.InjectMocks;
@@ -31,15 +35,15 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.test.util.ReflectionTestUtils;
 
 import java.io.ByteArrayOutputStream;
+import java.io.IOException;
 import java.io.OutputStream;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class ProductMarketplaceDataServiceImplTest extends BaseSetup {
@@ -53,6 +57,8 @@ class ProductMarketplaceDataServiceImplTest extends BaseSetup {
   private ProductDesignerInstallationRepository productDesignerInstallationRepo;
   @Mock
   private FileDownloadService fileDownloadService;
+  @Mock
+  private GitHubService gitHubService;
   @InjectMocks
   private ProductMarketplaceDataServiceImpl productMarketplaceDataService;
   @Captor
@@ -81,7 +87,7 @@ class ProductMarketplaceDataServiceImplTest extends BaseSetup {
     List<ProductMarketplaceData> capturedProducts = productListArgumentCaptor.getValue();
     assertEquals(1, capturedProducts.size(),
         "Product list size should be 1");
-    assertEquals(1, capturedProducts.get(0).getCustomOrder(),
+    assertEquals(1, capturedProducts.getFirst().getCustomOrder(),
         "Product list custom order should be 1");
   }
 
@@ -110,7 +116,8 @@ class ProductMarketplaceDataServiceImplTest extends BaseSetup {
 
     ProductCustomSortRequest result = productMarketplaceDataService.getCustomSortProducts();
 
-    assertTrue(result.getOrderedListOfProducts().isEmpty(), "Ordered products should be empty when repository has none");
+    assertTrue(result.getOrderedListOfProducts().isEmpty(),
+        "Ordered products should be empty when repository has none");
     assertEquals(SortOption.ALPHABETICALLY.getOption(), result.getRuleForRemainder(),
         "Default remainder rule should be alphabetically");
   }
@@ -125,7 +132,7 @@ class ProductMarketplaceDataServiceImplTest extends BaseSetup {
 
     assertEquals(1, refinedProducts.size(),
         "Product list size should be 1");
-    assertEquals(1, refinedProducts.get(0).getCustomOrder(),
+    assertEquals(1, refinedProducts.getFirst().getCustomOrder(),
         "Product list custom order should be 1");
     verify(productMarketplaceDataRepo).findById(SAMPLE_PRODUCT_ID);
   }
@@ -158,9 +165,9 @@ class ProductMarketplaceDataServiceImplTest extends BaseSetup {
     when(productMarketplaceDataRepo.findById(SAMPLE_PRODUCT_ID)).thenReturn(Optional.of(mockProductMarketplaceData));
     when(productMarketplaceDataRepo.updateInitialCount(eq(SAMPLE_PRODUCT_ID), anyInt())).thenReturn(10);
 
-    int result = productMarketplaceDataService.updateProductInstallationCount(SAMPLE_PRODUCT_ID);
+    ProductMarketplaceData result = productMarketplaceDataService.updateProductInstallationCount(SAMPLE_PRODUCT_ID);
 
-    assertEquals(10, result,
+    assertEquals(10, result.getInstallationCount(),
         "Installation count should match 10 when not synchronized");
     verify(productMarketplaceDataRepo).updateInitialCount(eq(SAMPLE_PRODUCT_ID), anyInt());
   }
@@ -224,19 +231,156 @@ class ProductMarketplaceDataServiceImplTest extends BaseSetup {
   void testGetProductArtifactStreamShouldReturnResource() {
     MavenArtifactVersion mav = new MavenArtifactVersion();
     mav.setDownloadUrl(MOCK_DOWNLOAD_URL);
-    when(mavenArtifactVersionRepo.findByProductIdAndArtifactIdAndVersion(MOCK_PRODUCT_ID, MOCK_ARTIFACT_ID, MOCK_RELEASED_VERSION))
+    when(mavenArtifactVersionRepo.findByProductIdAndArtifactIdAndVersion(MOCK_PRODUCT_ID, MOCK_ARTIFACT_ID,
+        MOCK_RELEASED_VERSION))
         .thenReturn(List.of(mav));
     ByteArrayResource resource = new ByteArrayResource("data".getBytes());
     ResponseEntity<Resource> responseEntity = ResponseEntity.ok(resource);
     when(fileDownloadService.fetchUrlResource(MOCK_DOWNLOAD_URL)).thenReturn(responseEntity);
 
-    ResponseEntity<Resource> result = productMarketplaceDataService.getProductArtifactStream(MOCK_PRODUCT_ID, MOCK_ARTIFACT_ID, MOCK_RELEASED_VERSION);
+    ResponseEntity<Resource> result = productMarketplaceDataService.getProductArtifactStream(MOCK_PRODUCT_ID,
+        MOCK_ARTIFACT_ID, MOCK_RELEASED_VERSION);
 
     assertNotNull(result, "Result stream should not be null with existed artifact");
     assertEquals(HttpStatusCode.valueOf(200), result.getStatusCode(), "Response entity should return code of 200");
     assertEquals(result.getBody(), resource, "Response's body should equal to the content form received stream");
-    verify(mavenArtifactVersionRepo).findByProductIdAndArtifactIdAndVersion(MOCK_PRODUCT_ID, MOCK_ARTIFACT_ID, MOCK_RELEASED_VERSION);
+    verify(mavenArtifactVersionRepo).findByProductIdAndArtifactIdAndVersion(MOCK_PRODUCT_ID, MOCK_ARTIFACT_ID,
+        MOCK_RELEASED_VERSION);
     verify(fileDownloadService).fetchUrlResource(MOCK_DOWNLOAD_URL);
   }
 
+  @Test
+  void testUpdateSuccessorForProductWhenProductNotFound() throws IOException {
+    DeprecationRequest request = buildDeprecatedRequest("https://successor.com", true, false, null);
+
+    when(productMarketplaceDataRepo.findById(MOCK_PRODUCT_ID)).thenReturn(Optional.of(getMockProductMarketplaceData
+        ()));
+    when(productRepo.findById(MOCK_PRODUCT_ID)).thenReturn(Optional.empty());
+
+    String response = productMarketplaceDataService.updateSuccessorForProduct(MOCK_PRODUCT_ID, request);
+
+    assertNull(response, "Pull request URL should be null when product is not found");
+    verify(productMarketplaceDataRepo).save(any(ProductMarketplaceData.class));
+    verify(productRepo, never()).save(any(Product.class));
+    verify(gitHubService, never()).updateReadmeForSuccessorNotes(anyString(), any());
+  }
+
+  @Test
+  void testUpdateSuccessorForProductSavesMarketplaceDataWithCorrectValues() throws IOException {
+    DeprecationRequest request = buildDeprecatedRequest("https://successor.com", true, false, null);
+    request.setDeprecationRequester("admin");
+
+    when(productMarketplaceDataRepo.findById(MOCK_PRODUCT_ID)).thenReturn(Optional.of(getMockProductMarketplaceData()));
+    when(productRepo.findById(MOCK_PRODUCT_ID)).thenReturn(Optional.empty());
+
+    productMarketplaceDataService.updateSuccessorForProduct(MOCK_PRODUCT_ID, request);
+
+    ArgumentCaptor<ProductMarketplaceData> captor = ArgumentCaptor.forClass(ProductMarketplaceData.class);
+    verify(productMarketplaceDataRepo).save(captor.capture());
+    ProductMarketplaceData saved = captor.getValue();
+    assertEquals("https://successor.com", saved.getSuccessor(), "Successor URL should be persisted");
+    assertEquals("admin", saved.getDeprecationRequester(), "Deprecation requester should be persisted");
+    assertNotNull(saved.getDeprecationDate(), "Deprecation date should be set automatically");
+  }
+
+  @Test
+  void testUpdateSuccessorForProductWithAddReadmeFalseDoesNotCreatePr() throws IOException {
+    DeprecationRequest request = buildDeprecatedRequest("https://successor.com", true, false, null);
+    Product product = getMockProduct();
+
+    when(productMarketplaceDataRepo.findById(MOCK_PRODUCT_ID)).thenReturn(Optional.of(getMockProductMarketplaceData
+        ()));
+    when(productRepo.findById(MOCK_PRODUCT_ID)).thenReturn(Optional.of(product));
+
+    String response = productMarketplaceDataService.updateSuccessorForProduct(MOCK_PRODUCT_ID, request);
+
+    assertNull(response, "Pull request URL should be null when addReadme is false");
+    assertEquals(Boolean.TRUE, product.getDeprecated(), "Product deprecated flag should be set to true");
+    verify(productRepo).save(product);
+    verify(gitHubService, never()).updateReadmeForSuccessorNotes(anyString(), any());
+  }
+
+  @Test
+  void testUpdateSuccessorForProductWithAddReadmeTrueAndNullActionDoesNotCreatePr() throws IOException {
+    DeprecationRequest request = buildDeprecatedRequest("https://successor.com", true, true, null);
+    Product product = getMockProduct();
+
+    when(productMarketplaceDataRepo.findById(MOCK_PRODUCT_ID)).thenReturn(
+        Optional.of(getMockProductMarketplaceData()));
+    when(productRepo.findById(MOCK_PRODUCT_ID)).thenReturn(Optional.of(product));
+
+    String response = productMarketplaceDataService.updateSuccessorForProduct(MOCK_PRODUCT_ID, request);
+
+    assertNull(response, "Pull request URL should be null when pullRequestAction is null");
+    verify(gitHubService, never()).updateReadmeForSuccessorNotes(anyString(), any());
+  }
+
+  @Test
+  void testUpdateSuccessorForProductWithAddReadmeTrueAndActionAddReturnsPrUrl() throws IOException {
+    DeprecationRequest request = buildDeprecatedRequest("https://successor.com", true, true, PullRequestAction.ADD);
+    Product product = getMockProduct();
+    product.setRepositoryName(MOCK_PRODUCT_REPOSITORY_NAME);
+
+    GHPullRequest mockPr = mock(GHPullRequest.class);
+    when(mockPr.getHtmlUrl()).thenReturn(URI.create("https://github.com/axonivy-market/bpmn-statistic/pull/1").toURL());
+
+    when(productMarketplaceDataRepo.findById(MOCK_PRODUCT_ID)).thenReturn(Optional.of(getMockProductMarketplaceData()));
+    when(productRepo.findById(MOCK_PRODUCT_ID)).thenReturn(Optional.of(product));
+    when(gitHubService.updateReadmeForSuccessorNotes(MOCK_PRODUCT_REPOSITORY_NAME, PullRequestAction.ADD)).thenReturn(
+        mockPr);
+
+    String response = productMarketplaceDataService.updateSuccessorForProduct(MOCK_PRODUCT_ID, request);
+
+    assertNotNull(response, "Pull request URL should be present when GitHub service returns a PR");
+    assertEquals("https://github.com/axonivy-market/bpmn-statistic/pull/1", response,
+        "Pull request URL should match the mocked GitHub PR HTML URL");
+    verify(gitHubService).updateReadmeForSuccessorNotes(MOCK_PRODUCT_REPOSITORY_NAME, PullRequestAction.ADD);
+  }
+
+  @Test
+  void testUpdateSuccessorForProductWithAddReadmeTrueAndActionRemoveReturnsPrUrl() throws IOException {
+    DeprecationRequest request = buildDeprecatedRequest(null, false, true, PullRequestAction.REMOVE);
+    Product product = getMockProduct();
+    product.setRepositoryName(MOCK_PRODUCT_REPOSITORY_NAME);
+
+    GHPullRequest mockPr = mock(GHPullRequest.class);
+    when(mockPr.getHtmlUrl()).thenReturn(URI.create("https://github.com/axonivy-market/bpmn-statistic/pull/2").toURL());
+
+    when(productMarketplaceDataRepo.findById(MOCK_PRODUCT_ID)).thenReturn(Optional.of(getMockProductMarketplaceData()));
+    when(productRepo.findById(MOCK_PRODUCT_ID)).thenReturn(Optional.of(product));
+    when(gitHubService.updateReadmeForSuccessorNotes(MOCK_PRODUCT_REPOSITORY_NAME, PullRequestAction.REMOVE))
+        .thenReturn(mockPr);
+
+    String response = productMarketplaceDataService.updateSuccessorForProduct(MOCK_PRODUCT_ID, request);
+
+    assertNotNull(response, "Pull request URL should be present for REMOVE action");
+    verify(gitHubService).updateReadmeForSuccessorNotes(MOCK_PRODUCT_REPOSITORY_NAME, PullRequestAction.REMOVE);
+  }
+
+  @Test
+  void testUpdateSuccessorForProductWhenGitHubReturnsNullPrSetsPullRequestUrlToNull() throws IOException {
+    DeprecationRequest request = buildDeprecatedRequest("https://successor.com", true, true, PullRequestAction.ADD);
+    Product product = getMockProduct();
+    product.setRepositoryName(MOCK_PRODUCT_REPOSITORY_NAME);
+
+    when(productMarketplaceDataRepo.findById(MOCK_PRODUCT_ID)).thenReturn(Optional.of(getMockProductMarketplaceData()));
+    when(productRepo.findById(MOCK_PRODUCT_ID)).thenReturn(Optional.of(product));
+    when(gitHubService.updateReadmeForSuccessorNotes(MOCK_PRODUCT_REPOSITORY_NAME, PullRequestAction.ADD))
+        .thenReturn(null);
+    String response = productMarketplaceDataService.updateSuccessorForProduct(MOCK_PRODUCT_ID, request);
+
+    assertNull(response, "Pull request URL should be null when GitHub service returns null");
+  }
+
+  private DeprecationRequest buildDeprecatedRequest(
+      String successorUrl, Boolean deprecated, boolean addReadme, PullRequestAction action) {
+    DeprecationRequest request = new DeprecationRequest();
+    request.setSuccessorUrl(successorUrl);
+    request.setIsDeprecated(deprecated);
+    request.setIsAddReadme(addReadme);
+    request.setPullRequestAction(action);
+    return request;
+  }
 }
+
+
